--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -36,14 +36,14 @@
     {
       \begin{cvitems}
         \item {Founded a technology based company with a focus on developing self embedded computing projects using \textbf{NodeJS} and open-source web applications using \textbf{MEAN} technology stack. }
-        \item {Implemented open-source prototype version for an application to share ideas in order to get feedback and improve your concept using \textbf{NodeJS} and \textbf{AngularJS}. Developed server-side actions, backend development and frontend related tasks. }
-        \item {Optimized assets using \textbf{Gulp} and for preprocessing with \textbf{SASS}. }
+        \item {Implemented open-source prototype for an application to share ideas in order to get feedback and improve it using \textbf{NodeJS} and \textbf{AngularJS}. Developed server-side actions, backend  and frontend related tasks. }
+        \item {Optimized assets using \textbf{Gulp} and preprocessing with \textbf{SASS}. }
       \end{cvitems} 
     }
   \cventry
     {Full Stack Developer <Co-Founder>}
     {Musement}
-    {Toluca, Vainilla JavaScript}
+    {Toluca, JavaScript}
     {Feb. 2016 - Sep. 2016}
     {
       \begin{cvitems}
