--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -1,23 +1,23 @@
-\cvsection{Graphics}
+\cvsection{Projects}
 \begin{cvhonors}
   \cvhonor
-    {Finalist}
-    {DEFCON 22nd CTF Hacking Competition World Final}
-    {Hotel Room}
-    {2014}
+    {MERN}
+    {A minimalistic nice web agenda}
+    {JIRAF}
+    {2018}
   \cvhonor
-    {Finalist}
-    {DEFCON 21st CTF Hacking Competition World Final}
-    {Doom Processing}
-    {2013}
+    {MERN}
+    {Web application for automation your activity on Instagram}
+    {OWA Influencers}
+    {2017}
   \cvhonor
-    {Finalist}
-    {Playable Library}
-    {Playable Library}
-    {2011}
+    {NodeJS \& Pug}
+    {Web showing services and information for a private airline}
+    {Real Alfa Fly}
+    {2016}
   \cvhonor
-    {6th Place}
-    {SECUINSIDE Hacking Competition World Final}
-    {Quadrality}
-    {2012}
+    {PhoneGap}
+    {Mobile application for videogames management and time tracking}
+    {Unbeaten}
+    {2015}
 \end{cvhonors}
