Awesome CV finished

--- a/resume.tex
+++ b/resume.tex
@@ -31,7 +31,7 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-emerald}
 %\definecolor{awesome}{HTML}{CA63A8}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
@@ -64,7 +64,7 @@
 %%% Optionals
 \position{Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
 \quote{Avant-garde mixer of art, science and technology. Complex problem-solver with an \\
-analytical and driven mindset. Full-stack developer using MERN technology. Passionate video game builder using Unity and UE}
+analytical and driven mindset. Full-stack developer using MERN technology. }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
