--- a/resume/committees.tex
+++ b/resume/committees.tex
@@ -7,7 +7,7 @@
     {2016}
   \cvhonor
     {Certified Network Associate Routing and Switching }
-    {CCNA Routing and Swithcing Essentials}
+    {CCNA Routing and Switching Essentials}
     {CISCO}
     {2015}
 \end{cvhonors}
