Added graphics CV

--- a/resume.tex
+++ b/resume.tex
@@ -62,9 +62,9 @@
 \github{jacobgarcia}
 \linkedin{jacobgarcia}
 %%% Optionals
-\position{Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
+\position{Software Engineer{\enskip\cdotp\enskip}Game Programmer}
 \quote{Avant-garde mixer of art, science and technology. Complex problem-solver with an \\
-analytical and driven mindset. Full-stack developer using MERN technology. }
+analytical and driven mindset. Passionate video game builder using Unity and UE. Full-stack developer using MERN technology. }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -82,8 +82,8 @@ analytical and driven mindset. Full-stack developer using MERN technology. }
 
 %%% Import contents
 \import{\sectiondir}{experience.tex}
+\import{\sectiondir}{projects.tex}
 \import{\sectiondir}{education.tex}
 \import{\sectiondir}{committees.tex}
-\import{\sectiondir}{honors.tex}
 
 \end{document}
