--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,52 +3,24 @@
   \cventry
     {Lead Full Stack Developer}
     {Connus International}
-    {Mexico City, JavaScript ES6}
+    {Mexico City, NodeJS}
     {Oct. 2017 - Present}
     {
       \begin{cvitems}
         \item {Developed a real-time application for monitoring telecommunication sites infrastructure which is web based using \textbf{MERN} stack.}
-        \item {Implemented an API server for on-site hardware command and control system with \textbf{NodeJS} and \textbf{Express}.}
-        \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}. }
         \item {Designed and modelled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
-        \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
-        \item {Optimized performance and CPU usage using \textbf{V8-Profiler}. Optimized non-code static assets management with \textbf{Webpack}. }
-        \item {Deployed and maintained \textbf{NGINX} web server on \textbf{AWS}. }
       \end{cvitems}
     }
   \cventry
-    {Backend Developer <Co-Founder>}
+    {VR Developer <Co-Founder>}
     {Nure}
-    {Toluca, JavaScript ES6}
+    {Toluca, Unity 2017}
     {March. 2017 - Present}
     {
       \begin{cvitems}
-        \item {Founded a digital services, product development and branding agency with a focus on working with clients side-by-side. Offering responsive web applications using \textbf{MERN} technology stack as a main service. }
-        \item {Developed APIs using \textbf{NodeJS} and \textbf{Express}. Tested API endpoints using \textbf{Postman} scripting tools.}
+        \item {Founded a digital services, product development and branding agency with a focus on working with clients side-by-side. Offering \textbf{virtual reality experiences} as a main service. }
+        \item {Developed VR experiences for Google Cardboard using \textbf{Google VR SDK}. }
          \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}. }
-      \end{cvitems}
-    }
-  \cventry
-    {Software Developer <Co-Founder>}
-    {Wetopia}
-    {Guadalajara, JavaScript ES2015}
-    {Nov. 2016 - May 2017}
-    {
-      \begin{cvitems}
-        \item {Founded a technology based company with a focus on developing self embedded computing projects using \textbf{NodeJS} and open-source web applications using \textbf{MEAN} technology stack. }
-        \item {Implemented open-source prototype for an application to share ideas in order to get feedback and improve it using \textbf{NodeJS} and \textbf{AngularJS}. Developed server-side actions, backend  and frontend related tasks. }
-        \item {Optimized assets using \textbf{Gulp} and preprocessing with \textbf{SASS}. }
-      \end{cvitems} 
-    }
-  \cventry
-    {Full Stack Developer <Co-Founder>}
-    {Musement}
-    {Toluca, JavaScript}
-    {Feb. 2016 - Sep. 2016}
-    {
-      \begin{cvitems}
-        \item {Founded a startup for entrepreneurs where users contribute to projects and help other entrepreneurs around the world through valuable feedback and guidance in the process of building their products/services. Developed using \textbf{MEAN} technology stack.}
-        \item {Implemented mocks from scratch using \textbf{HTML5} and \textbf{CSS3} alongside \textbf{AngularJS}. }
       \end{cvitems}
     }
 \end{cventries}
