Add Credijusto to experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,19 +1,31 @@
 \cvsection{Experience}
 \begin{cventries}
   \cventry
+    {Software Engineer <Full Stack Developer>}
+    {Credijusto}
+    {Mexico City, JavaScript ES6/Python}
+    {Nov. 2018 - Present}
+    {
+      \begin{cvitems}
+        \item {Developed a loan management application system; web based using \textbf{React} on the frontend and \textbf{Python} on the backend.}
+        \item {Implemented an API to be consumed by different in-house systems using \textbf{Django} and \textbf{REST Framework}.}
+        \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
+        \item {Reviewed code and pull requests constantly on \textbf{GitHub}.}
+        \item {Maintained an \textbf{ECS} architecture on \textbf{AWS}. }
+      \end{cvitems}
+    }
+  \cventry
     {Lead Full Stack Developer}
     {Connus International}
     {Mexico City, JavaScript ES6}
-    {Oct. 2017 - Present}
+    {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
         \item {Developed a real-time application for monitoring telecommunication sites infrastructure which is web based using \textbf{MERN} stack.}
         \item {Implemented an API server for on-site hardware command and control system with \textbf{NodeJS} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}. }
-        \item {Designed and modelled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
+        \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
-        \item {Optimized performance and CPU usage using \textbf{V8-Profiler}. Optimized non-code static assets management with \textbf{Webpack}. }
-        \item {Deployed and maintained \textbf{NGINX} web server on \textbf{AWS}. }
       \end{cvitems}
     }
   \cventry
@@ -23,7 +35,6 @@
     {March. 2017 - Present}
     {
       \begin{cvitems}
-        \item {Founded a digital services, product development and branding agency with a focus on working with clients side-by-side. Offering responsive web applications using \textbf{MERN} technology stack as a main service. }
         \item {Developed APIs using \textbf{NodeJS} and \textbf{Express}. Tested API endpoints using \textbf{Postman} scripting tools.}
          \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}. }
       \end{cvitems}
@@ -35,10 +46,9 @@
     {Nov. 2016 - May 2017}
     {
       \begin{cvitems}
-        \item {Founded a technology based company with a focus on developing self embedded computing projects using \textbf{NodeJS} and open-source web applications using \textbf{MEAN} technology stack. }
-        \item {Implemented open-source prototype for an application to share ideas in order to get feedback and improve it using \textbf{NodeJS} and \textbf{AngularJS}. Developed server-side actions, backend  and frontend related tasks. }
+        \item {Implemented open-source prototype application to share ideas in order to get feedback using \textbf{NodeJS} and \textbf{AngularJS}.}
         \item {Optimized assets using \textbf{Gulp} and preprocessing with \textbf{SASS}. }
-      \end{cvitems} 
+      \end{cvitems}
     }
   \cventry
     {Full Stack Developer <Co-Founder>}
@@ -47,7 +57,6 @@
     {Feb. 2016 - Sep. 2016}
     {
       \begin{cvitems}
-        \item {Founded a startup for entrepreneurs where users contribute to projects and help other entrepreneurs around the world through valuable feedback and guidance in the process of building their products/services. Developed using \textbf{MEAN} technology stack.}
         \item {Implemented mocks from scratch using \textbf{HTML5} and \textbf{CSS3} alongside \textbf{AngularJS}. }
       \end{cvitems}
     }
