--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
 \name{Jacob}{Garcia}
-\mobile{(+52) 15-58145-2376}
+\mobile{(+52) 55-55-57-46-78}
 %%% Social
 \email{mario@nure.mx}
 \homepage{nure.mx}
@@ -64,7 +64,7 @@
 %%% Optionals
 \position{Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
 \quote{Avant-garde mixer of art, science and technology. Complex problem-solver with an \\
-analytical and driven mindset. Full-stack developer using MERN technology. }
+analytical and driven mindset. Full-stack developer and sci-fi lover }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
