--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -1,23 +1,23 @@
 \cvsection{Projects}
 \begin{cvhonors}
   \cvhonor
+    {MERN \& TensorFlow}
+    {Reverse image search engine, Client-API, and management dashboard}
+    {Visual Search}
+    {2019}
+  \cvhonor
     {MERN}
-    {A minimalistic nice web agenda}
+    {A minimalistic nice web agenda for gym classes}
     {JIRAF}
     {2018}
   \cvhonor
-    {MERN}
-    {Web application for automation your activity on Instagram}
+    {MERN \& Python}
+    {Web application to automate your activity on Instagram}
     {OWA Influencers}
     {2017}
   \cvhonor
     {NodeJS \& Pug}
-    {Web showing services and information for a private airline}
+    {Static site showing services and information for a private airline}
     {Real Alfa Fly}
     {2016}
-  \cvhonor
-    {PhoneGap}
-    {Mobile application for videogames management and time tracking}
-    {Unbeaten}
-    {2015}
 \end{cvhonors}
