--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,61 +3,53 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {Mexico City, JavaScript ES6/Python}
+    {Mexico City/Remote, React \& DRF}
     {Nov. 2018 - Present}
     {
       \begin{cvitems}
-        \item {Developed a loan management application system; web based using \textbf{React} on the frontend and \textbf{Python} on the backend.}
-        \item {Implemented an API to be consumed by different in-house systems using \textbf{Django} and \textbf{REST Framework}.}
+        \item {Developed a loan management application web system using \textbf{React} and \textbf{Django REST Framework}. Reduced paperwork and improved organization and management across portfolio management, collection and legal departments.}
+        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
+        \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
+        \item {Implemented an API to be consumed by different in-house systems using \textbf{Django REST Framework}. Provided useful insights for important business decisions.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
         \item {Reviewed code and pull requests constantly on \textbf{GitHub}.}
-        \item {Maintained an \textbf{ECS} architecture on \textbf{AWS}. }
       \end{cvitems}
     }
   \cventry
-    {Lead Full Stack Developer}
+    {Lead Full Stack Developer <Engineering Manager>}
     {Connus International}
-    {Mexico City, JavaScript ES6}
+    {Mexico City, React \& Node}
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Developed a real-time application for monitoring telecommunication sites infrastructure which is web based using \textbf{MERN} stack.}
-        \item {Implemented an API server for on-site hardware command and control system with \textbf{NodeJS} and \textbf{Express}.}
-        \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}. }
+        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
+        \item {Implemented an API server for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
+        \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
-  \cventry
-    {Backend Developer <Co-Founder>}
-    {Nure}
-    {Toluca, JavaScript ES6}
-    {March. 2017 - Present}
-    {
-      \begin{cvitems}
-        \item {Developed APIs using \textbf{NodeJS} and \textbf{Express}. Tested API endpoints using \textbf{Postman} scripting tools.}
-         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}. }
-      \end{cvitems}
-    }
-  \cventry
-    {Software Developer <Co-Founder>}
-    {Wetopia}
-    {Guadalajara, JavaScript ES2015}
-    {Nov. 2016 - May 2017}
-    {
-      \begin{cvitems}
-        \item {Implemented open-source prototype application to share ideas in order to get feedback using \textbf{NodeJS} and \textbf{AngularJS}.}
-        \item {Optimized assets using \textbf{Gulp} and preprocessing with \textbf{SASS}. }
-      \end{cvitems}
-    }
-  \cventry
-    {Full Stack Developer <Co-Founder>}
-    {Musement}
-    {Toluca, JavaScript}
-    {Feb. 2016 - Sep. 2016}
-    {
-      \begin{cvitems}
-        \item {Implemented mocks from scratch using \textbf{HTML5} and \textbf{CSS3} alongside \textbf{AngularJS}. }
-      \end{cvitems}
-    }
-\end{cventries}
+    \cventry
+      {Backend Developer <Co-Founder>}
+      {Nure}
+      {Toluca \& Mexico City, React \& Node}
+      {Mar. 2017 - Present}
+      {
+        \begin{cvitems}
+          \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
+           \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
+        \end{cvitems}
+      }
+    \cventry
+      {Full Stack Developer <Co-Founder>}
+      {Musement - Wetopia}
+      {Guadalajara, Angular \& Node}
+      {Feb. 2016 - May. 2017}
+      {
+        \begin{cvitems}
+          \item {Developed application to share experience, posts and connect with others in order to learn from them using \textbf{Node} and \textbf{Angular}.}
+          \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
+          \item {Implemented mocks from scratch using \textbf{HTML5} and \textbf{CSS3} alongside \textbf{Angular}.}
+        \end{cvitems}
+      }
+  \end{cventries}
