Fix minor issues

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -7,7 +7,7 @@
     {Nov. 2018 - Present}
     {
       \begin{cvitems}
-        \item {Developed a loan management application web system using \textbf{React} and \textbf{Django REST Framework}. Reduced paperwork and improved organization and management across portfolio management, collection and legal departments.}
+        \item {Developed a loan management application web system using \textbf{React} and \textbf{Django REST Framework}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
         \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
         \item {Implemented an API to be consumed by different in-house systems using \textbf{Django REST Framework}. Provided useful insights for important business decisions.}
@@ -23,7 +23,7 @@
     {
       \begin{cvitems}
         \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
-        \item {Implemented an API server for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
+        \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
