Add Rockett experience

--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -6,6 +6,11 @@
     {Visual Search}
     {2019}
   \cvhonor
+    {React Native \& GraphQL}
+    {Mobile application for booking and exploring local experiences}
+    {Rockett}
+    {2019}
+  \cvhonor
     {MERN}
     {A minimalistic nice web agenda for gym classes}
     {JIRAF}
