Add Ksquare experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -2,9 +2,19 @@
 \begin{cventries}
   \cventry
     {Software Engineer <Full Stack Developer>}
+    {Ksquare Solutions}
+    {Dallas/DFW, React \& Node}
+    {Jan. 2020 - Present}
+    {
+      \begin{cvitems}
+        \item {Developed internal tools for improving efficiency, communication, organization and management across human resources, engineering and technology departments using \textbf{React} and \textbf{Node}.}
+      \end{cvitems}
+    }
+  \cventry
+    {Software Engineer <Full Stack Developer>}
     {Credijusto}
     {Mexico City/Remote, React \& DRF}
-    {Nov. 2018 - Present}
+    {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
         \item {Developed a loan management application web system using \textbf{React} and \textbf{Django REST Framework}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
