Update resume website

--- a/resume.tex
+++ b/resume.tex
@@ -58,7 +58,7 @@
 \mobile{(+52) 56-17-09-97-30}
 %%% Social
 \email{mario@nure.mx}
-\homepage{nure.mx}
+\homepage{jacobgarcia.github.io}
 \github{jacobgarcia}
 \linkedin{jacobgarcia}
 %%% Optionals
