--- a/fontawesome.sty
+++ b/fontawesome.sty
@@ -527,7 +527,7 @@ Path=fonts/
 \expandafter\def\csname faicon@simplybuilt\endcsname {\symbol{"F215}} \def\faSimplybuilt {{\FA\csname faicon@simplybuilt\endcsname}}
 \expandafter\def\csname faicon@sitemap\endcsname {\symbol{"F0E8}} \def\faSitemap {{\FA\csname faicon@sitemap\endcsname}}
 \expandafter\def\csname faicon@skyatlas\endcsname {\symbol{"F216}} \def\faSkyatlas {{\FA\csname faicon@skyatlas\endcsname}}
-\expandafter\def\csname faicon@skype\endcsname {\symbol{"F17E}} \def\faSkype {{\FA\csname faicon@skype\endcsname}}
+\expandafter\def\csname faicon@skype\endcsname {\symbol{"F0AC}} \def\faSkype {{\FA\csname faicon@skype\endcsname}}
 \expandafter\def\csname faicon@slack\endcsname {\symbol{"F198}} \def\faSlack {{\FA\csname faicon@slack\endcsname}}
 \expandafter\def\csname faicon@sliders\endcsname {\symbol{"F1DE}} \def\faSliders {{\FA\csname faicon@sliders\endcsname}}
 \expandafter\def\csname faicon@slideshare\endcsname {\symbol{"F1E7}} \def\faSlideshare {{\FA\csname faicon@slideshare\endcsname}}
