--- a/resume.tex
+++ b/resume.tex
@@ -61,6 +61,7 @@
 \homepage{jacobgarcia.github.io}
 \github{jacobgarcia}
 \linkedin{jacobgarcia}
+\skype{nure.mx}
 %%% Optionals
 \position{Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
 \quote{Avant-garde mixer of art, science and technology. Complex problem-solver with an \\
