--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,31 +3,34 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Ksquare Solutions}
-    {Dallas/DFW, React \& Node}
+    {Dallas - DFW, React \& Go/Node}
     {Jan. 2020 - Present}
     {
       \begin{cvitems}
-        \item {Developed internal tools for improving efficiency, communication, organization and management across human resources, engineering and technology departments using \textbf{React} and \textbf{Node}.}
+        \item {Developed internal tools for improving efficiency, performance, and response times on current projects using \textbf{React} and \textbf{Go}.}
+        \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
       \end{cvitems}
     }
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {Mexico City/Remote, React \& DRF}
+    {CDMX - Remote, React \& Python/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Developed a loan management application web system using \textbf{React} and \textbf{Django REST Framework}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
+        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
+        \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
+        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
         \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Implemented an API to be consumed by different in-house systems using \textbf{Django REST Framework}. Provided useful insights for important business decisions.}
+        \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
     }
   \cventry
     {Lead Full Stack Developer <Engineering Manager>}
     {Connus International}
-    {Mexico City, React \& Node}
+    {CDMX, React \& Node}
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
@@ -41,7 +44,7 @@
     \cventry
       {Backend Developer <Co-Founder>}
       {Nure}
-      {Toluca \& Mexico City, React \& Node}
+      {Toluca \& CDMX, React \& Node}
       {Mar. 2017 - Present}
       {
         \begin{cvitems}
@@ -58,7 +61,6 @@
         \begin{cvitems}
           \item {Developed application to share experience, posts and connect with others in order to learn from them using \textbf{Node} and \textbf{Angular}.}
           \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
-          \item {Implemented mocks from scratch using \textbf{HTML5} and \textbf{CSS3} alongside \textbf{Angular}.}
         \end{cvitems}
       }
   \end{cventries}
