Update resume experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,11 +3,11 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Ksquare Solutions}
-    {Dallas - DFW, React \& Go/Node}
+    {Dallas - DFW, React/RN \& Go/Node}
     {Jan. 2020 - Present}
     {
       \begin{cvitems}
-        \item {Developed internal tools for improving efficiency, performance, and response times on current projects using \textbf{React} and \textbf{Go}.}
+        \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
       \end{cvitems}
     }
