Update phone number

--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
 \name{Jacob}{Garcia}
-\mobile{(+52) 56-17-09-97-30}
+\mobile{ (972) 200-2895}
 %%% Social
 \email{mario@nure.mx}
 \homepage{jacobgarcia.github.io}
