Update to focuse more on backend experience

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,22 +9,22 @@
       \begin{cvitems}
         \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
+        \item {Worked with \textbf{Docker} container infrastructure to encapsulate code into a file system with abstraction and automation.}
       \end{cvitems}
     }
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {CDMX - Remote, React \& Python/Go}
+    {CDMX - Remote, React \& Node/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
-        \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
-        \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
-        \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
-        \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
+        \item {Daily-basis deploying and maintaining multi-container applications through \textbf{Docker} and \textbf{ECS}.}
+        \item {Worked with \textbf{CI/CD} using \textbf{Jenkins} to automate the build process from version control tool into testing and production environment.}
+        \item {Contributed to a user management app using \textbf{React} and \textbf{Golang}. Improved user experience and interaction.}
+        \item {Upgraded a quote web application using \textbf{React} and \textbf{Node}. Improved customer experience and user satisfaction.}
+        \item {Developed an API to be consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
+        \item {Assisted in designing and management of \textbf{PostgreSQL} database schemas and tables.}
       \end{cvitems}
     }
   \cventry
@@ -34,9 +34,9 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
-        \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
-        \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
+        \item {Leaded secure APIs development using \textbf{OAuth} and \textbf{JWT} for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
+        \item {Developed a real-time web application for monitoring infrastructure at telecommunication sites using \textbf{MERN} stack.}
+        \item {Implemented a solution for IoT communication using \textbf{Socket.io} and \textbf{RabbitMQ}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
@@ -48,6 +48,8 @@
       {Mar. 2017 - Present}
       {
         \begin{cvitems}
+          \item {Integrated Amazon Cloud Watch with Amazon \textbf{EC2} instances for monitoring the log files and track metrics.}
+          \item {Experienced with event-driven and scheduled AWS \textbf{Lambda} functions to trigger various AWS resources.}
           \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
            \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
         \end{cvitems}
@@ -59,7 +61,7 @@
       {Feb. 2016 - May. 2017}
       {
         \begin{cvitems}
-          \item {Developed application to share experience, posts and connect with others in order to learn from them using \textbf{Node} and \textbf{Angular}.}
+          \item {Developed a social application to share experiences and connect with others to get guidance; built using \textbf{Node} and \textbf{Angular}.}
           \item {Optimized assets using \textbf{Webpack} and preprocessing with \textbf{SASS}.}
         \end{cvitems}
       }
