--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -15,16 +15,16 @@
   \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {CDMX - Remote, React \& Node/Go}
+    {CDMX - Remote, React \& Python/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
         \item {Daily-basis deploying and maintaining multi-container applications through \textbf{Docker} and \textbf{ECS}.}
-        \item {Worked with \textbf{CI/CD} using \textbf{Jenkins} to automate the build process from version control tool into testing and production environment.}
+        \item {Leaded a team of \textbf{offshore} developers from Spain, Colombia and Singapur for developing a risk management application.}
         \item {Contributed to a user management app using \textbf{React} and \textbf{Golang}. Improved user experience and interaction.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Node}. Improved customer experience and user satisfaction.}
-        \item {Developed an API to be consumed by in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
-        \item {Assisted in designing and management of \textbf{PostgreSQL} database schemas and tables.}
+        \item {Mantained an OroCRM container using \textbf{PHP}. Improved customer experience and user satisfaction.}
+        \item {Developed \textbf{Web Services} to be consumed by in-house systems using \textbf{Django}. Provided useful insights for business decisions.}
+        \item {Assisted in designing and management of \textbf{PostgreSQL} and \textbf{MySQL} database schemas and tables.}
       \end{cvitems}
     }
   \cventry
@@ -34,7 +34,7 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Leaded secure APIs development using \textbf{OAuth} and \textbf{JWT} for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
+        \item {Leaded secure \textbf{Web Services} development using \textbf{JWT} for on-site hardware command and control system using \textbf{Node} and \textbf{Express}.}
         \item {Developed a real-time web application for monitoring infrastructure at telecommunication sites using \textbf{MERN} stack.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io} and \textbf{RabbitMQ}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
