--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -21,7 +21,7 @@
     {OWA Influencers}
     {2017}
   \cvhonor
-    {NodeJS \& Pug}
+    {Node \& Angular}
     {Static site showing services and information for a private airline}
     {Real Alfa Fly}
     {2016}
