First security updates

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -12,6 +12,17 @@
       \end{cvitems}
     }
   \cventry
+    {Security Specialist <Co-Founder>}
+    {Nure}
+    {Toluca \& CDMX, React \& Node}
+    {Mar. 2017 - Present}
+    {
+      \begin{cvitems}
+        \item {Implemented security code review practices, methods, and guidelines based on \textbf{OWASP Top Ten}.}
+         \item {Assesed all customer web applications with tools like \textbf{SQLmap}, \textbf{Nikto}, and \textbf{Nmap}.}
+      \end{cvitems}
+    }
+  \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
     {CDMX - Remote, React \& Python/Go}
@@ -41,17 +52,6 @@
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
-    \cventry
-      {Backend Developer <Co-Founder>}
-      {Nure}
-      {Toluca \& CDMX, React \& Node}
-      {Mar. 2017 - Present}
-      {
-        \begin{cvitems}
-          \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-           \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
-        \end{cvitems}
-      }
     \cventry
       {Full Stack Developer <Co-Founder>}
       {Musement - Wetopia}
