Add more security information

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,10 +9,11 @@
       \begin{cvitems}
         \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
+        \item {Worked with \textbf{Docker} container infrastructure to encapsulate code into a file system with abstraction and automation.}
       \end{cvitems}
     }
   \cventry
-    {Security Specialist <Co-Founder>}
+    {Security and Infrastructure Specialist <Co-Founder>}
     {Nure}
     {Toluca \& CDMX, React \& Node}
     {Mar. 2017 - Present}
@@ -20,6 +21,8 @@
       \begin{cvitems}
         \item {Implemented security code review practices, methods, and guidelines based on \textbf{OWASP Top Ten}.}
          \item {Assesed all customer web applications with tools like \textbf{SQLmap}, \textbf{Nikto}, and \textbf{Nmap}.}
+         \item {Integrated Amazon Cloud Watch with Amazon \textbf{EC2} instances for monitoring the log files and track metrics.}
+         \item {Experienced with event-driven and scheduled AWS \textbf{Lambda} functions to trigger various AWS resources.}
       \end{cvitems}
     }
   \cventry
@@ -29,6 +32,7 @@
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
+        \item {Daily-basis deploying and maintaining multi-container applications through \textbf{Docker} and \textbf{ECS}.}
         \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
         \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
         \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
