--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -33,8 +33,8 @@
     {
       \begin{cvitems}
         \item {Daily-basis deploying and maintaining multi-container applications through \textbf{Docker} and \textbf{ECS}.}
-        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
-        \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
+        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision-taking tool for executive management.}
+        \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
         \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
         \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
         \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
