--- a/resume.tex
+++ b/resume.tex
@@ -64,8 +64,7 @@
 \skype{nure.mx}
 %%% Optionals
 \position{Software Engineer{\enskip\cdotp\enskip}Full Stack Developer}
-\quote{Avant-garde mixer of art, science and technology. Complex problem-solver with an \\
-analytical and driven mindset. Full-stack developer and sci-fi lover }
+\quote{"It's widely recognized that if you're not failing now and then, you're not being innovative enough or taking enough risks."\\ -- Brian W. Fitzpatrick, Debugging Teams: Better Productivity through Collaboration.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
