--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -37,8 +37,6 @@
         \item {Contributed to a customer management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
         \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Improved organization and efficiency across all company.}
         \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
-        \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
-        \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
     }
@@ -49,8 +47,8 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
-        \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
+        \item {Transitioned software development efforts to a test-driven development (\textbf{TDD}) process.}
+        \item {Developed a real-time web application for monitoring infrastructure at telecommunication sites using \textbf{MERN} stack.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
