--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -1,7 +1,7 @@
 \cvsection{Projects}
 \begin{cvhonors}
   \cvhonor
-    {MERN \& TensorFlow}
+    {MERN \& Elasticsearch}
     {Reverse image search engine, Client-API, and management dashboard}
     {Visual Search}
     {2019}
