--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -12,17 +12,29 @@
       \end{cvitems}
     }
   \cventry
+    {Full Stack Developer <Co-Founder>}
+    {Nure}
+    {Toluca \& CDMX, React/RN \& Node}
+    {Mar. 2017 - Present}
+    {
+      \begin{cvitems}
+        \item {Designed components, higher order components, reusable hooks and utils for both \textbf{React} and \textbf{React Native}.}
+        \item {Developed and owned all the backend for multiple (5+) projects using \textbf{Node}. Contributed as the main senior backend developer.}
+         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
+      \end{cvitems}
+    }
+  \cventry
     {Software Engineer <Full Stack Developer>}
     {Credijusto}
-    {CDMX - Remote, React \& Python/Go}
+    {CDMX - Remote, React/RN \& Python/Go}
     {Nov. 2018 - Jan. 2020}
     {
       \begin{cvitems}
-        \item {Authored a risk management app using \textbf{React} and \textbf{Flask}. Served as a decision taking tool for high management.}
-        \item {Contributed to a user management app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with loan process.}
+        \item {Authored a risk management app using \textbf{React Native} and \textbf{Flask}. Served as a decision taking tool for executive management.}
+        \item {Contributed to a user customer app using \textbf{React} and \textbf{Go}. Improved user experience and interaction with the loan process.}
         \item {Developed a loan management app using \textbf{React} and \textbf{Django}. Reduced paperwork, improved organization and management across portfolio management, collection and legal departments.}
-        \item {Upgraded a quote web application using \textbf{React} and \textbf{Python}. Improved customer experience and user satisfaction.}
-        \item {Contributed to the in-house \textbf{React} components library. Enhanced user experience and increased consistency across 4 applications.}
+        \item {Upgraded a quote web application using \textbf{React Native} and \textbf{Python}. Improved customer experience and user satisfaction.}
+        \item {Contributed to the in-house \textbf{React} and \textbf{React Native} component libraries. Enhanced user experience and increased consistency across all compay in-house and external applications.}
         \item {Implemented an API to be consumed by  in-house systems using \textbf{Django}. Provided useful insights for important business decisions.}
         \item {Designed and modeled database tables and relations with \textbf{PostgreSQL}.}
       \end{cvitems}
@@ -34,24 +46,13 @@
     {Oct. 2017 - Nov. 2018}
     {
       \begin{cvitems}
-        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack. Attracted \textbf{AT\&T}, \textbf{Puma Energy} and other important clients with this solution.}
+        \item {Developed a real-time web application for monitoring telecommunication sites infrastructure using \textbf{MERN} stack.}
         \item {Implemented an API for on-site hardware command and control system with \textbf{Node} and \textbf{Express}.}
         \item {Implemented a solution for IoT communication using \textbf{Socket.io}. Developed a client-side test suite using \textbf{Python}.}
         \item {Designed and modeled all database collections and schemas with \textbf{MongoDB} and \textbf{Mongoose}.}
         \item {Trained continuously Junior IT members on \textbf{React} and \textbf{Redux}. Reviewed code and pull requests on \textbf{GitHub}.}
       \end{cvitems}
     }
-    \cventry
-      {Backend Developer <Co-Founder>}
-      {Nure}
-      {Toluca \& CDMX, React \& Node}
-      {Mar. 2017 - Present}
-      {
-        \begin{cvitems}
-          \item {Developed and owned all the backend for multiple (5>) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-           \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
-        \end{cvitems}
-      }
     \cventry
       {Full Stack Developer <Co-Founder>}
       {Musement - Wetopia}
