--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -7,7 +7,7 @@
     {Jan. 2020 - Present}
     {
       \begin{cvitems}
-        \item {Developed internal projects for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
+        \item {Developed internal applications and tools for third party integrations using \textbf{React}, \textbf{React Native} and \textbf{Golang}.}
         \item {Contributed to the in-house testing framework applied on different projects and clients using \textbf{React} and \textbf{Node}.}
       \end{cvitems}
     }
@@ -18,9 +18,9 @@
     {Mar. 2017 - Present}
     {
       \begin{cvitems}
-        \item {Designed components, higher order components, reusable hooks and utils for both \textbf{React} and \textbf{React Native}.}
-        \item {Developed and owned all the backend for multiple (5+) projects using \textbf{Node}. Contributed as the main senior backend developer.}
-         \item {Managed client relationships, financial income, taxes, and information. Managed projects using \textbf{SCRUM}.}
+        \item {Designed components, higher order components, reusable hooks and utilities for both \textbf{React} and \textbf{React Native}.}
+        \item {Developed and leaded the backend for multiple (5+) projects using \textbf{Node}. Managed infrastructure and application security.}
+         \item {Managed customer relationships, financial income, taxes, and data analysis. Managed projects using \textbf{SCRUM}.}
       \end{cvitems}
     }
   \cventry
